<?xml version="1.0"?>
<package format="2">
  <name>sample_code</name>
  <version>0.0.0</version>
  <description>This package is designed for the MRL robot sample code to collect laser scan data. It is compatible with both TurtleBot3 and MiniBot. This package should be executed on host systems.</description>

  <maintainer email="willy101560@gmail.com">Yu-Chen</maintainer>

  <license>MRL-24-09-16</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
